# claude-code-builder

./: .editorconfig  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION_GUIDE.md  LICENSE  MIGRATION_V2.md  Makefile  PR_DESCRIPTION.md  README.md  README_V2.md  REWRITE_SPEC.md  TECHNICAL_ARCHITECTURE.md  V3_COMPLETE_FINAL.md  V3_EXECUTIVE_SUMMARY.md  V3_FEATURE_6_DYNAMIC_SKILL_GENERATION.md  V3_HONEST_REFLECTION.md  V3_IMPLEMENTATION_COMPLETE.md  V3_IMPLEMENTATION_PLAN.md  V3_PLAN.md  V3_SHANNON_ALIGNED_SPEC.md  V3_VALIDATION_REPORT.md  claude-code-builder-prd.md  pyproject.toml  smoke_test_v2.py  test_spec.md  test_spec_simple.md  validate_build.py
.claude-plugin/: manifest.json
.claude/commands/: analyze.md  build.md  checkpoint.md  do.md  index.md  init.md  reflect.md  resume.md  status.md  test.md
.claude/core/: ccb-principles.md  complexity-analysis.md  phase-planning.md  project-indexing.md  state-management.md  testing-philosophy.md
.claude/hooks/: hooks.json  post_tool_use.py  precompact.py  session_start.sh  stop.py  user_prompt_submit.py
.claude/skills/ccb-principles/: SKILL.md
.claude/skills/checkpoint-preservation/: SKILL.md
.claude/skills/complexity-analysis/: SKILL.md
.claude/skills/functional-testing/: SKILL.md
.claude/skills/honest-assessment/: SKILL.md
.claude/skills/incremental-enhancement/: SKILL.md
.claude/skills/mcp-augmented-research/: SKILL.md
.claude/skills/phase-execution/: SKILL.md
.claude/skills/project-indexing/: SKILL.md
.claude/skills/spec-driven-building/: SKILL.md
.claude/skills/test-coverage/: SKILL.md
.claude/skills/validation-gates/: SKILL.md
examples/: cli_tool.md  simple_api.md
src/claude_code_builder/: __init__.py  py.typed
src/claude_code_builder/agents/: __init__.py  base.py  code_generator.py  error_handler.py  instruction_builder.py  orchestrator.py  review_agent.py  spec_analyzer.py  task_generator.py
src/claude_code_builder/cli/: __init__.py  main.py
src/claude_code_builder/cli/commands/: __init__.py  analyze.py  build.py  config.py  init.py  resume.py  status.py  validate.py
src/claude_code_builder/core/: __init__.py  base_model.py  config.py  context_manager.py  enums.py  exceptions.py  logging_system.py  models.py  output_manager.py
src/claude_code_builder/executor/: __init__.py  build_orchestrator.py  executor.py  phase_executor.py
src/claude_code_builder/mcp/: __init__.py  checkpoints.py  clients.py  mock_orchestrator.py  orchestrator.py
src/claude_code_builder_v2/agents/: __init__.py  acceptance_generator.py  base.py  code_generator.py  code_reviewer.py  documentation_agent.py  error_handler.py  instruction_builder.py  spec_analyzer.py  task_generator.py  test_generator.py
src/claude_code_builder_v2/builders/: __init__.py  claude_md_builder.py  command_builder.py  documentation_builder.py
src/claude_code_builder_v2/cli/: __init__.py  main.py
src/claude_code_builder_v2/core/: __init__.py  config.py  enums.py  exceptions.py  logging_system.py  models.py  types.py
src/claude_code_builder_v2/executor/: __init__.py  build_orchestrator.py  phase_executor.py
src/claude_code_builder_v2/mcp/: __init__.py  integration.py
src/claude_code_builder_v2/sdk/: __init__.py  client_manager.py  cost_tracker.py  hook_manager.py  hook_registry.py  hooks_enhanced.py  progress_reporter.py  streaming.py  subagent_factory.py  tool_registry.py
src/claude_code_builder_v3/: __init__.py
src/claude_code_builder_v3/agents/: __init__.py  skill_generator.py  skill_refiner.py  skill_validator.py
src/claude_code_builder_v3/cli/: __init__.py  main.py
src/claude_code_builder_v3/core/: __init__.py  exceptions.py  models.py
src/claude_code_builder_v3/executor/: __init__.py  pipeline_executor.py  quality_gates.py
src/claude_code_builder_v3/mcp/: __init__.py  client.py
src/claude_code_builder_v3/sdk/: __init__.py  build_orchestrator.py  sdk_integration.py  skills_orchestrator.py
src/claude_code_builder_v3/skills/: __init__.py  loader.py  manager.py  registry.py
